--- a/src/common/html/modulehead.html
+++ b/src/common/html/modulehead.html
@@ -37,7 +37,7 @@
     </script>
 </head>
 
-<body class="admn">
+<body class="plusvw admn">
     <div class="zpl_cvr">
         <nav class="zpl_Nav" id="topnav">
 
