--- a/src/modules/home/html/index.html
+++ b/src/modules/home/html/index.html
@@ -762,6 +762,168 @@
     </div>
 </div>
 
+<div class="zpl_outer DN" id="workspc">
+    <div class="zpl_topmnu">
+        <ul class="tab-pane">
+            <li listid="" title="Sub" class=" zpl_act"><a onclick="showtabs('workspc_aprvl',this)">Approval</a></li>
+            <li listid="" title="Approval" class=""><a onclick="showtabs('workspc_sub',this)">Subordinate</a></li>
+            <li listid="" title="Jobs"><a onclick="showtabs('workspc_job',this)">Jobs</a></li>
+            <li listid="" title="Goals" class=""><a onclick="showtabs('workspc_prj',this)">Project</a></li>
+            <li listid="" title="Tasks" class=""><a onclick="showtabs('workspc_task',this)">Tasks</a></li>
+        </ul>
+    </div>
+    <div class="zpl_container" id="workspc_aprvl">
+        <div class="zpl_iwrpr">
+            <div class="zpl_iwrprrgt" style="padding: 0;">
+                <div class="zpl_act">
+                    <div class="zpl_rgtcnt">
+                        <img src="../../images/cmn/apprvl.png" style="padding: 30px 6px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="zpl_container DN" id="workspc_sub">
+        <div class="zpl_iwrpr">
+            <div class="zpl_iwrprrgt" style="padding: 0;">
+                <div class="zpl_act">
+                    <div class="zpl_rgtcnt" style="padding: 30px 0;">
+                        <img src="../../images/cmn/dropdwn.png" style="width: 300px;border-radius: 5px;margin: 0 0 16px 20px;">
+                        <div class="zpl_tblres" style="padding: 0 20px;">
+                            <h1 style="background-color: red; color: #fff; text-align: center; padding: 20px;">This Tab is only visible for managers.</h1>
+                            <table class="zpl_tbl">
+                                <thead>
+                                    <tr>
+
+                                        <th>Employee</th>
+                                        <th>Jobs</th>
+                                        <th>Goals</th>
+                                        <th>Tasks</th>
+                                        <th>
+                                            <div></div>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr data-popup-open="empjob">
+
+                                        <td>
+                                            <div class="zpl_em">
+                                                <div class="zpl_emimg"><img src="../../images/ui.png"></div>
+                                                <div class="zpl_emdts">
+                                                    <div><em>2324 - </em><b>Kate Winslet</b></div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td data-popup-open="empjob"><span>2</span>
+                                        </td>
+                                        <td data-popup-open="empgoal"><span>4</span></td>
+                                        <td data-popup-open="emptask">
+                                            <span>7</span>
+                                        </td>
+                                        <td width="10%">
+                                            <div class="text-center">
+                                                <div class="zpl_hvr">
+                                                    <a href="#" class="zlabel zlabel--blue zlabel--primary zlabel--medium">Review</a>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr data-popup-open="empjob">
+
+                                        <td>
+                                            <div class="zpl_em">
+                                                <div class="zpl_emimg"><img src="../../images/ui.png"></div>
+                                                <div class="zpl_emdts">
+                                                    <div><em>2324 - </em><b>Kate Winslet</b></div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td data-popup-open="empjob"><span>2</span>
+                                        </td>
+                                        <td data-popup-open="empgoal"><span>4</span></td>
+                                        <td data-popup-open="emptask">
+                                            <span>7</span>
+                                        </td>
+                                        <td width="10%">
+                                            <div class="text-center">
+                                                <div class="zpl_hvr">
+                                                    <a href="#" class="zlabel zlabel--blue zlabel--primary zlabel--medium">Review</a>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr data-popup-open="empjob">
+
+                                        <td>
+                                            <div class="zpl_em">
+                                                <div class="zpl_emimg"><img src="../../images/ui.png"></div>
+                                                <div class="zpl_emdts">
+                                                    <div><em>2324 - </em><b>Kate Winslet</b></div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td data-popup-open="empjob"><span>2</span>
+                                        </td>
+                                        <td data-popup-open="empgoal"><span>4</span></td>
+                                        <td data-popup-open="emptask">
+                                            <span>7</span>
+                                        </td>
+                                        <td width="10%">
+                                            <div class="text-center">
+                                                <div class="zpl_hvr">
+                                                    <a href="#" class="zlabel zlabel--blue zlabel--primary zlabel--medium">Review</a>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="zpl_container DN" id="workspc_job">
+        <div class="zpl_iwrpr">
+            <div class="zpl_iwrprrgt" style="padding: 0;">
+                <div class="zpl_act">
+                    <div class="zpl_rgtcnt" style="padding: 30px 0;">
+                        <img src="../../images/cmn/custvw.png" alt="" style="    width: 230px;/* right: 26px; */margin: 0 auto 15px;/* top: 0; */    margin-right: 28px;display: block;position: absolute;right: 0;">
+                        <img src="../../images/cmn/dropdwn.png" style="width: 300px;border-radius: 5px;margin: 0 0 16px 20px;">
+                        <img src="../../images/cmn/teamjob.png" style="padding: 0 4px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="zpl_container DN" id="workspc_prj">
+        <div class="zpl_iwrpr">
+            <div class="zpl_iwrprrgt" style="padding: 0;">
+                <div class="zpl_act">
+                    <div class="zpl_rgtcnt" style="padding: 30px 20px;">
+                        <img src="../../images/cmn/proj.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="zpl_container DN" id="workspc_task">
+        <div class="zpl_iwrpr">
+            <div class="zpl_iwrprrgt" style="padding: 0;">
+                <div class="zpl_act">
+                    <div class="zpl_rgtcnt" style="padding: 30px 0;">
+                        <img src="../../images/cmn/custvw.png" alt="" style="    width: 230px;/* right: 26px; */margin: 0 auto 15px;/* top: 0; */    margin-right: 28px;display: block;position: absolute;right: 0;">
+                        <img src="../../images/cmn/dropdwn.png" style="width: 300px;border-radius: 5px;margin: 0 0 16px 20px;">
+                        <img src="../../images/cmn/task.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="zpl_outer DN" id="mail1">
     <div class="zpl_topmnu">
     </div>
