--- a/src/modules/home/html/index.html
+++ b/src/modules/home/html/index.html
@@ -777,6 +777,7 @@
             <div class="zpl_iwrprrgt" style="padding: 0;">
                 <div class="zpl_act">
                     <div class="zpl_rgtcnt">
+                        <h1 style="background-color: red; color: #fff; text-align: center; padding: 20px;">This Tab is only visible for managers.</h1>
                         <img src="../../images/cmn/apprvl.png" style="padding: 30px 6px;">
                     </div>
                 </div>
@@ -1196,6 +1197,9 @@
                     <a><i style="background: url(../../images/cmn/log_show.png);height:18px;width:18px;background-size: 19px;"></i>Create Presentation<i class="PI_fil_askus ylw"></i></a>
                 </li>
                 <li>
+                    <a><i style="background: url(../../images/People-logo.png);height:18px;width:18px;background-size: 18px;"></i>Apply Leave<i class="PI_fil_askus ylw"></i></a>
+                </li>
+                <li>
                     <em onclick="quckact()">View All</em>
                 </li>
             </ul>
@@ -1261,6 +1265,13 @@
                     <p><i style="background: url(../../images/cmn/log_sht.png);height:18px;width:18px;background-size: 19px;"></i> Sheet</p>
                 </li>
                 <li><a><i class="PI_fil_askus ylw"></i> Create Spreadsheet</a></li>
+                <li class="mt">
+                    <p><i style="background: url(../../images/People-logo.png);height:18px;width:18px;background-size: 18px;"></i> Show</p>
+                </li>
+                <li><a><i class="PI_fil_askus ylw"></i> Apply leave</a></li>
+                <li><a><i class="PI_star"></i> Personal Details Update</a></li>
+                <li><a><i class="PI_star"></i> Campaign Access</a></li>
+                <li><a><i class="PI_star"></i> Gift card replacement</a></li>
             </ul>
         </font>
     </div>
