--- a/src/modules/home/index.html
+++ b/src/modules/home/index.html
@@ -1325,7 +1325,7 @@
                 </li>
                 <li><a><i class="PI_fil_askus ylw"></i> Create Spreadsheet</a></li>
                 <li class="mt">
-                    <p><i style="background: url(../../images/People-logo.png);height:18px;width:18px;background-size: 18px;"></i> Show</p>
+                    <p><i style="background: url(../../images/People-logo.png);height:18px;width:18px;background-size: 18px;"></i> People</p>
                 </li>
                 <li><a><i class="PI_fil_askus ylw"></i> Apply leave</a></li>
                 <li><a><i class="PI_star"></i> Personal Details Update</a></li>
