--- a/src/modules/home/index.html
+++ b/src/modules/home/index.html
@@ -1284,6 +1284,7 @@
                 </li>
             </ul>
         </div>
+        <h4 style="padding: 10px;background: red;color: #fff !important;text-align: center;margin-bottom: 24px;font-size: 16px;">* Based on the subscribtions, all avaialbale options willl be listed *</h4>
         <font>
             <ul>
                 <li>
